# google_locdest

./: .env.sample  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
apps/geo/: models.py  serializers.py  service.py  urls.py  views.py
django_config/: asgi.py  settings.py  urls.py  uvicorn_worker.py  wsgi.py
django_config/settings/: base.py  development.py  production.py
geo/: models.py  serializers.py  service.py  tests.py  views.py
geo/migrations/: 0001_initial.py  0002_alter_geolocationsdistance_distance_text.py  0003_alter_geolocation_input_address.py  0004_alter_geolocation_input_address.py
google_locdest_config/: asgi.py  settings.py  urls.py  wsgi.py
